--- a/index.html
+++ b/index.html
@@ -7,48 +7,7 @@
   <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
   <title>Porret Gaming</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <style>
-    html {
-        position: relative;
-    }
-    body {
-        margin-bottom: 250px;
-    }
-    /* footer {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        display: flex-bottom;
-        justify-content: center;
-        align-items: center;
-    } */
-    nav {
-        position: fixed;
-        top: 0;
-        width: 100%;
-    }
-    #background {
-        background: black;
-        /* overflow: hidden; */
-    }
-    img {
-        opacity: 0.6;
-    } 
-    .overlay-text {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 1;
-        text-align: center;
-        color: #fff;
-        text-shadow: 1px 1px #000;
-    }
-    .overlay-text h1 {
-        font-size: 8vw;
-        margin-bottom: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -59,13 +18,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="Squiggle.html">Squiggle</a>
+          <a class="nav-link" href="./Squiggle.html">Squiggle</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="./contact.html">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="privacy_policy.html">Squiggle Privacy Policy</a>
+          <a class="nav-link" href="./privacy_policy.html">Squiggle Privacy Policy</a>
         </li>
       </ul>
     </div>
@@ -76,6 +35,12 @@
       <h1 class="display-4"><b>Porret Gaming</b></h1>
       </br>
       <p class="lead">Porret Gaming is a one-person game development company founded by an individual developer who is deeply passionate about creating high-quality, engaging, and unique games. The company's main focus is on procedural generation, a technique used in game development to create game content algorithmically, rather than by hand. This allows for infinite possibilities and keeps the gameplay fresh and exciting with each playthrough.</p>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="jumbotron jumbotron-sm" style="margin-top: 10px">
+      <h1 class="display-4"><b>Games</b></h1>
     </div>
   </div>
 
@@ -115,6 +80,54 @@
         <a href="Squiggle.html">
             <div class="overlay-text">
                 <h1>Squiggle</h1>
+            </div>
+        </a>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="jumbotron jumbotron-sm" style="margin-top: 50px">
+      <h1 class="display-4"><b>Plugins</b></h1>
+    </div>
+  </div>
+
+  <div class="container">
+    <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel" data-interval="3000" data-pause=false>
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div id="background">
+                    <img src="images/Squiggle/EasyLevel.png" class="d-block w-100" alt="Image 1">
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div id="background">
+                    <img src="images/Squiggle/MainMenu.png" class="d-block w-100" alt="Image 2">
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div id="background">
+                    <img src="images/Squiggle/MediumLevel.png" class="d-block w-100" alt="Image 3">
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+
+        <a href="plugins/google-play-services/saved-games/overview.html">
+            <div class="overlay-text">
+              <h2 style="white-space: nowrap; font-size: 5vw;">Google Play Services:</h2>
+              <h3 style="white-space: nowrap; font-size: 3vw;">Saved Games</h3>
             </div>
         </a>
     </div>
