--- a/plugins/google-play-services/saved-games/overview.html
+++ b/plugins/google-play-services/saved-games/overview.html
@@ -70,6 +70,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link inactive" href="fetch_games.html">
+                                Fetch Games
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link inactive" href="conflict_resolution.html">
                                 Conflict Resolution
                             </a>
@@ -86,6 +91,16 @@
                         <li class="nav-item">
                             <a class="nav-link inactive" href="snapshot.html">
                                 Snapshot
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="resolution_policy.html">
+                                Resolution Policy
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="snapshot_error.html">
+                                Snapshot Error
                             </a>
                         </li>
                         <hr/>
@@ -121,20 +136,20 @@
     <footer class="bg-dark text-light">
     <div class="container py-4">
         <div class="row">
-        <div class="col-md-6 mb-4 mb-md-0">
-            <h5><b>Links</b></h5>
-            <ul class="list-unstyled mb-0">
-            <li><a href="index.html" class="text-light">Home</a></li>
-            <li><a href="contact.html" class="text-light">Contact</a></li>
-            <li><a href="privacy_policy.html" class="text-light">Squiggle Privacy Policy</a></li>
-            </ul>
-        </div>
-        <div class="col-md-6 mb-4 mb-md-0">
-            <h5><b>Contact</b></h5>
-            <ul class="list-unstyled mb-0">
-            <li class="text-light">Email: porretgaming@gmail.com</li>
-            </ul>
-        </div>
+            <div class="col-md-6 mb-4 mb-md-0">
+                <h5><b>Links</b></h5>
+                <ul class="list-unstyled mb-0">
+                    <li><a href="../../../index.html" class="text-light">Home</a></li>
+                    <li><a href="../../../contact.html" class="text-light">Contact</a></li>
+                    <li><a href="../../../privacy_policy.html" class="text-light">Squiggle Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="col-md-6 mb-4 mb-md-0">
+                <h5><b>Contact</b></h5>
+                <ul class="list-unstyled mb-0">
+                <li class="text-light">Email: porretgaming@gmail.com</li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="bg-dark py-2">
