--- a/plugins/google-play-services/saved-games/resolution_policy.html
+++ b/plugins/google-play-services/saved-games/resolution_policy.html
@@ -84,7 +84,7 @@
                             <a class="nav-link disabled">Object Definitions</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="snapshot_metadata.html">
+                            <a class="nav-link inactive" href="snapshot_metadata.html">
                                 Snapshot Metadata
                             </a>
                         </li>
@@ -94,7 +94,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="resolution_policy.html">
+                            <a class="nav-link active" href="resolution_policy.html">
                                 Resolution Policy
                             </a>
                         </li>
@@ -118,12 +118,12 @@
       
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Snapshot Metadata</h1>
+                    <h1 class="h2">Resolution Policy</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="jumbotron" style="padding: 20px; margin-bottom: 0rem;">
                         <p class="content" style="margin-bottom: 0rem;">
-                            Snapshot Metadata Struct shows information about a snapshot.
+                            Snapshot Struct shows information about a snapshot.
                         </p>
                     </div>
                 </div>
