--- a/plugins/google-play-services/saved-games/deleting_game.html
+++ b/plugins/google-play-services/saved-games/deleting_game.html
@@ -70,6 +70,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link inactive" href="fetch_games.html">
+                                Fetch Games
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link inactive" href="conflict_resolution.html">
                                 Conflict Resolution
                             </a>
@@ -86,6 +91,16 @@
                         <li class="nav-item">
                             <a class="nav-link inactive" href="snapshot.html">
                                 Snapshot
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="resolution_policy.html">
+                                Resolution Policy
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="snapshot_error.html">
+                                Snapshot Error
                             </a>
                         </li>
                         <hr/>
@@ -106,13 +121,65 @@
                     <h1 class="h2">Deleting a Game</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
-                    <div class="jumbotron" style="padding: 20px; margin-bottom: 0rem;">
+                    <div class="info">
+                        <p class="content">
+                            This is an asynchronous function which allows you to save a game to a snapshot in Google Play Services.
+                        </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                            The parameters include the name of the slot to save to, a description of the save game, the amount of time played, a progress value, the save game object to be saved and the conflict resolution policy to be used.
+                            <br/>Once the asynchronous operation has completed, one of two delegates will be called to handle the success and failure situations.
                         </p>
                     </div>
                 </div>
-                <canvas class="my-4 w-100" id="myChart"></canvas>
+                <div class="container" style="margin-left: 0px; padding-left: 0px;">
+                    <div style="display: flex; justify-content: center; align-items: center;">
+                        <img src="../../../images/SavedGames/SavedGames_Plugin_DeleteGame.png" style="max-width: 70%;">
+                    </div>
+                </div>
+                <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
+                    <span class="badge badge-primary">1</span>
+                    <div class="info">
+                        <p class="content">
+                            <b>Slot Name</b>
+                        </p>
+                        <p class="content" style="margin-bottom: 0rem;">
+                            The slot name is a string that uniquely identifies the slot where the save game will be stored.
+                            A slot represents a specific point in time that the game was saved, and multiple snapshots can be stored under different slot names.
+                            Providing a new slot name will result in a new snapshot, whereas if it already exists, it will overwrite the existing slots data.
+                        </p>
+                    </div>
+                </div>
+                <div style="padding-top: 30px">
+                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
+                        <span class="badge badge-primary">2</span>
+                        <div class="info">
+                            <p class="content">
+                                <b>Save Game Description</b>
+                            </p>
+                            <p class="content" style="margin-bottom: 0rem;">
+                                A brief description of the saved game data. This can be used to help the player identify different saved games in the future.
+                                This value is stored in the Snapshots metadata.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div style="padding-top: 30px">
+                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
+                        <span class="badge badge-primary">3</span>
+                        <div class="info">
+                            <p class="content">
+                                <b>Played Time</b>
+                            </p>
+                            <p class="content" style="margin-bottom: 0rem;">
+                                The amount of time that the player has spent playing the game, in milliseconds.
+                                This value is typically used to track progress and help the player resume from where they left off in the game.
+                                This value is stored in the Snapshots metadata and can optionally be used in a provided conflict resolution strategy.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div style="margin-bottom: 150px">
+                </div>
             </main>
         </div>
       </div>
@@ -120,20 +187,20 @@
     <footer class="bg-dark text-light">
     <div class="container py-4">
         <div class="row">
-        <div class="col-md-6 mb-4 mb-md-0">
-            <h5><b>Links</b></h5>
-            <ul class="list-unstyled mb-0">
-            <li><a href="index.html" class="text-light">Home</a></li>
-            <li><a href="contact.html" class="text-light">Contact</a></li>
-            <li><a href="privacy_policy.html" class="text-light">Squiggle Privacy Policy</a></li>
-            </ul>
-        </div>
-        <div class="col-md-6 mb-4 mb-md-0">
-            <h5><b>Contact</b></h5>
-            <ul class="list-unstyled mb-0">
-            <li class="text-light">Email: porretgaming@gmail.com</li>
-            </ul>
-        </div>
+            <div class="col-md-6 mb-4 mb-md-0">
+                <h5><b>Links</b></h5>
+                <ul class="list-unstyled mb-0">
+                    <li><a href="../../../index.html" class="text-light">Home</a></li>
+                    <li><a href="../../../contact.html" class="text-light">Contact</a></li>
+                    <li><a href="../../../privacy_policy.html" class="text-light">Squiggle Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="col-md-6 mb-4 mb-md-0">
+                <h5><b>Contact</b></h5>
+                <ul class="list-unstyled mb-0">
+                <li class="text-light">Email: porretgaming@gmail.com</li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="bg-dark py-2">
