--- a/plugins/google-play-services/saved-games/fetch_games.html
+++ b/plugins/google-play-services/saved-games/fetch_games.html
@@ -70,7 +70,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="fetch_games.html">
+                            <a class="nav-link active" href="fetch_games.html">
                                 Fetch Games
                             </a>
                         </li>
@@ -84,7 +84,7 @@
                             <a class="nav-link disabled">Object Definitions</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="snapshot_metadata.html">
+                            <a class="nav-link inactive" href="snapshot_metadata.html">
                                 Snapshot Metadata
                             </a>
                         </li>
@@ -118,16 +118,53 @@
       
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Snapshot Metadata</h1>
+                    <h1 class="h2">Fetch Games</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
-                    <div class="jumbotron" style="padding: 20px; margin-bottom: 0rem;">
+                    <div class="info">
+                        <p class="content">
+                            This is an asynchronous function which allows you to save a game to a snapshot in Google Play Services.
+                        </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            Snapshot Metadata Struct shows information about a snapshot.
+                            The parameters include the name of the slot to save to, a description of the save game, the amount of time played, a progress value, the save game object to be saved and the conflict resolution policy to be used.
+                            <br/>Once the asynchronous operation has completed, one of two delegates will be called to handle the success and failure situations.
                         </p>
                     </div>
                 </div>
-                <canvas class="my-4 w-100" id="myChart"></canvas>
+                <div class="container" style="margin-left: 0px; padding-left: 0px;">
+                    <div style="display: flex; justify-content: center; align-items: center;">
+                        <img src="../../../images/SavedGames/SavedGames_Plugin_FetchGames.png" style="max-width: 70%;">
+                    </div>
+                </div>
+                <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
+                    <span class="badge badge-primary">1</span>
+                    <div class="info">
+                        <p class="content">
+                            <b>Slot Name</b>
+                        </p>
+                        <p class="content" style="margin-bottom: 0rem;">
+                            The slot name is a string that uniquely identifies the slot where the save game will be stored.
+                            A slot represents a specific point in time that the game was saved, and multiple snapshots can be stored under different slot names.
+                            Providing a new slot name will result in a new snapshot, whereas if it already exists, it will overwrite the existing slots data.
+                        </p>
+                    </div>
+                </div>
+                <div style="padding-top: 30px">
+                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
+                        <span class="badge badge-primary">2</span>
+                        <div class="info">
+                            <p class="content">
+                                <b>Save Game Description</b>
+                            </p>
+                            <p class="content" style="margin-bottom: 0rem;">
+                                A brief description of the saved game data. This can be used to help the player identify different saved games in the future.
+                                This value is stored in the Snapshots metadata.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div style="margin-bottom: 150px">
+                </div>
             </main>
         </div>
       </div>
