--- a/plugins/google-play-services/saved-games/saving_game.html
+++ b/plugins/google-play-services/saved-games/saving_game.html
@@ -71,6 +71,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link inactive" href="fetch_games.html">
+                                Fetch Games
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link inactive" href="conflict_resolution.html">
                                 Conflict Resolution
                             </a>
@@ -87,6 +92,16 @@
                         <li class="nav-item">
                             <a class="nav-link inactive" href="snapshot.html">
                                 Snapshot
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="resolution_policy.html">
+                                Resolution Policy
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="snapshot_error.html">
+                                Snapshot Error
                             </a>
                         </li>
                         <hr/>
@@ -120,7 +135,7 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div style="display: flex; justify-content: center; align-items: center;">
-                        <img src="../../../images/SavedGames/SaveGame_Blueprint.png" style="max-width: 70%;">
+                        <img src="../../../images/SavedGames/SavedGames_Plugin_SaveGame.png" style="max-width: 70%;">
                     </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
@@ -240,7 +255,6 @@
                     </div>
                 </div>
                 <div style="margin-bottom: 150px">
-
                 </div>
                 <!-- <canvas class="my-4 w-100" id="myChart"></canvas> -->
             </main>
@@ -250,20 +264,20 @@
     <footer class="bg-dark text-light">
     <div class="container py-4">
         <div class="row">
-        <div class="col-md-6 mb-4 mb-md-0">
-            <h5><b>Links</b></h5>
-            <ul class="list-unstyled mb-0">
-            <li><a href="index.html" class="text-light">Home</a></li>
-            <li><a href="contact.html" class="text-light">Contact</a></li>
-            <li><a href="privacy_policy.html" class="text-light">Squiggle Privacy Policy</a></li>
-            </ul>
-        </div>
-        <div class="col-md-6 mb-4 mb-md-0">
-            <h5><b>Contact</b></h5>
-            <ul class="list-unstyled mb-0">
-            <li class="text-light">Email: porretgaming@gmail.com</li>
-            </ul>
-        </div>
+            <div class="col-md-6 mb-4 mb-md-0">
+                <h5><b>Links</b></h5>
+                <ul class="list-unstyled mb-0">
+                    <li><a href="../../../index.html" class="text-light">Home</a></li>
+                    <li><a href="../../../contact.html" class="text-light">Contact</a></li>
+                    <li><a href="../../../privacy_policy.html" class="text-light">Squiggle Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="col-md-6 mb-4 mb-md-0">
+                <h5><b>Contact</b></h5>
+                <ul class="list-unstyled mb-0">
+                <li class="text-light">Email: porretgaming@gmail.com</li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="bg-dark py-2">
