update parameter info's with correct labels and update styling

--- a/plugins/google-play-services/saved-games/conflict_resolution.html
+++ b/plugins/google-play-services/saved-games/conflict_resolution.html
@@ -140,7 +140,7 @@
                     <span class="badge badge-primary">1</span>
                     <div class="info">
                         <p class="content">
-                            <b>Slot Name</b>
+                            <b>Manual Conflict Resolution Stategy</b>
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
                             The slot name is a string that uniquely identifies the slot where the save game will be stored.
