--- a/plugins/google-play-services/saved-games/contact.html
+++ b/plugins/google-play-services/saved-games/contact.html
@@ -121,7 +121,7 @@
                     <h1 class="h2">Contact</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
-                    <div class="jumbotron" style="padding: 20px; margin-bottom: 0rem;">
+                    <div class="info">
                         <p class="content" style="margin-bottom: 0rem;">
                             You can get support by either emailing us or preferably communicating your issue on our discord server.
                         </p>
