--- a/plugins/google-play-services/saved-games/deleting_game.html
+++ b/plugins/google-play-services/saved-games/deleting_game.html
@@ -154,7 +154,7 @@
                         <span class="badge badge-primary">2</span>
                         <div class="info">
                             <p class="content">
-                                <b>Save Game Description</b>
+                                <b>On Success</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
                                 A brief description of the saved game data. This can be used to help the player identify different saved games in the future.
@@ -168,7 +168,7 @@
                         <span class="badge badge-primary">3</span>
                         <div class="info">
                             <p class="content">
-                                <b>Played Time</b>
+                                <b>On Failure</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
                                 The amount of time that the player has spent playing the game, in milliseconds.
