--- a/plugins/google-play-services/saved-games/external-ui.html
+++ b/plugins/google-play-services/saved-games/external-ui.html
@@ -154,7 +154,7 @@
                         <span class="badge badge-primary">2</span>
                         <div class="info">
                             <p class="content">
-                                <b>Save Game Description</b>
+                                <b>Saved Games Count</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
                                 A brief description of the saved game data. This can be used to help the player identify different saved games in the future.
@@ -168,7 +168,7 @@
                         <span class="badge badge-primary">3</span>
                         <div class="info">
                             <p class="content">
-                                <b>Played Time</b>
+                                <b>Allow Add</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
                                 The amount of time that the player has spent playing the game, in milliseconds.
@@ -183,7 +183,7 @@
                         <span class="badge badge-primary">4</span>
                         <div class="info">
                             <p class="content">
-                                <b>Progress Value</b>
+                                <b>Allow Delete</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
                                 A numeric value representing the player's progress in the game.
@@ -198,7 +198,7 @@
                         <span class="badge badge-primary">5</span>
                         <div class="info">
                             <p class="content">
-                                <b>Save Game Object</b>
+                                <b>On Add New Saved Game</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
                                 The game data that will be saved to the snapshot.
@@ -213,7 +213,7 @@
                         <span class="badge badge-primary">6</span>
                         <div class="info">
                             <p class="content">
-                                <b>Conflict Resolution Policy</b>
+                                <b>On Saved Game Selected</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
                                 The policy to be used when there is a conflict between the locally saved snapshot and the snapshot stored on the server.
@@ -227,7 +227,7 @@
                         <span class="badge badge-primary">7</span>
                         <div class="info">
                             <p class="content">
-                                <b>On Success</b>
+                                <b>On Failure</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
                                 A delegate that will be called when the snapshot is successfully saved.
