--- a/plugins/google-play-services/saved-games/overview.html
+++ b/plugins/google-play-services/saved-games/overview.html
@@ -113,6 +113,8 @@
                             </a>
                         </li>
                     </ul>
+                    <div style="margin-bottom: 100px">
+                    </div>
                 </div>
             </nav>
       
@@ -121,14 +123,14 @@
                     <h1 class="h2">Overview</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
-                <div class="jumbotron" style="padding: 20px; margin-bottom: 0rem;">
-                    <p class="content">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                    <p class="content" style="margin-bottom: 0rem;">
-                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                    </p>
+                    <div class="info">
+                        <p class="content">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                        <p class="content" style="margin-bottom: 0rem;">
+                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                        </p>
+                    </div>
                 </div>
-            </div>
-                <canvas class="my-4 w-100" id="myChart"></canvas>
+                <!-- <canvas class="my-4 w-100" id="myChart"></canvas> -->
             </main>
         </div>
       </div>
