--- a/plugins/google-play-services/saved-games/fetch_games.html
+++ b/plugins/google-play-services/saved-games/fetch_games.html
@@ -140,7 +140,7 @@
                     <span class="badge badge-primary">1</span>
                     <div class="info">
                         <p class="content">
-                            <b>Slot Name</b>
+                            <b>On Saved Games Retrieved</b>
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
                             The slot name is a string that uniquely identifies the slot where the save game will be stored.
@@ -154,7 +154,7 @@
                         <span class="badge badge-primary">2</span>
                         <div class="info">
                             <p class="content">
-                                <b>Save Game Description</b>
+                                <b>On Failure</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
                                 A brief description of the saved game data. This can be used to help the player identify different saved games in the future.
