--- a/plugins/google-play-services/saved-games/snapshot.html
+++ b/plugins/google-play-services/saved-games/snapshot.html
@@ -121,13 +121,33 @@
                     <h1 class="h2">Snapshot</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
-                    <div class="info">
-                        <p class="content" style="margin-bottom: 0rem;">
-                            Snapshot Struct shows information about a snapshot.
-                        </p>
+                    <div class="container" style="margin-left: 0px; padding-left: 0px;">
+                        <div class="info">
+                            <p class="content">
+                                The Snapshot struct is designed to easily group a Snapshot's binary game data with its corresponding <a href="snapshot_metadata.html>">SnapshotMetadata</a>.
+                            </p>
+                            <p class="content">
+                                The read and write fields of the SnapshotMetadata struct are the SaveGameObject itself as well as the <a href="snapshot_metadata.html>">SnapshotMetadata</a>.
+                                This struct is only used when <span style="font-weight: 500">RESOLUTION_POLICY_MANUAL</span> is selected as a <a href="resolution_policy.html">Resolution Policy</a>.
+                                This will be the struct used as input parameters as well as the return type of your custom function defined in your manual <a href="conflict_resolution.html">Conflict Resolution</a> function.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="container" style="margin-left: 0px; padding-left: 0px;">
+                        <div style="display: flex; align-items: center;">
+                            <img src="../../../images/SavedGames/SavedGames_Object_Snapshot.png" style="max-width: 70%;">
+                        </div>
+                    </div>
+                    <div class="container" style="margin-left: 0px; padding-top: 20px; padding-left: 0px;">
+                        <div class="info">
+                            <p class="content" style="margin-bottom: 0rem;">
+                                Table of fields, types and descritpions goes here...
+                            </p>
+                        </div>
                     </div>
                 </div>
-                <canvas class="my-4 w-100" id="myChart"></canvas>
+                <div style="margin-bottom: 150px">
+                </div>
             </main>
         </div>
       </div>
