--- a/plugins/google-play-services/saved-games/snapshot_error.html
+++ b/plugins/google-play-services/saved-games/snapshot_error.html
@@ -123,8 +123,17 @@
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
                         <p class="content" style="margin-bottom: 0rem;">
-                            Snapshot Struct shows information about a snapshot.
+                            The Snapshot Error enumeration is a list of possible error's that can occur during actions taken with all the blueprint nodes.
                         </p>
+                    </div>
+                </div>
+                <div style="padding-top: 30px">
+                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
+                        <div class="info">
+                            <p class="content" style="margin-bottom: 0rem;">
+                                Table of fields, types and descritpions goes here...
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <canvas class="my-4 w-100" id="myChart"></canvas>
